--- a/src/Styles/RecursosHumanos/Reportes.css
+++ b/src/Styles/RecursosHumanos/Reportes.css
@@ -170,6 +170,67 @@ tr:first-of-type{
 
 }
 
+.report-container{
+    width: 85%;
+    margin-top: 5%;
+}
+
+.fixed-data{
+    position: fixed;
+    width: 19%;
+    
+}
+
+.fixed-data-section{
+    
+    margin-bottom: 2em;
+
+}
+
+.fixed-data-section-title,
+.fixed-data-section-data{
+    padding: 0.5em 0.8em;
+    text-align: center;
+    font-size: 1.9em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+}
+
+.fixed-data-section-title{
+    background-color: rgb(0, 53, 108);
+    color: white;
+}
+
+.fixed-data-section-data{
+    background-color: rgb(217, 217, 217);
+}
+
+.project-table{
+    margin-top: 0;
+    margin-left: 34%;
+    width: 48%;
+}
+
+.project-table th{
+    width: 50%;
+    height: 70px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.8em;
+    font-weight: 500;
+}
+
+.project-table tr:nth-of-type(1n+1){
+    background-color: rgb(217, 217, 217);
+}
+
+.project-table tr:nth-of-type(2n+1){
+    background-color: rgb(190, 224, 255)
+}
+
+.project-table-header th{
+    background-color: rgb(0, 53, 108);
+}
+
 @media (max-width: 1430px){
     .report-title p{
         font-size: 30px;
