--- a/src/Styles/RecursosHumanos/RecursosHumanos.css
+++ b/src/Styles/RecursosHumanos/RecursosHumanos.css
@@ -1,3 +1,11 @@
+.loadingScreen{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 85vh;
+}
+
 .recursos-humanos-container{
     /*background-color: rgb(211, 224, 238);*/
     border-radius: 30px;
