--- a/src/Styles/RecursosHumanos/Reportes.css
+++ b/src/Styles/RecursosHumanos/Reportes.css
@@ -232,6 +232,11 @@ tr:first-of-type{
     background-color: rgb(0, 53, 108);
 }
 
+.contain {
+    width: 60px;
+    height: 60px;
+}
+
 @media (max-width: 1430px){
     .report-title p{
         font-size: 30px;
