--- a/src/Styles/RecursosHumanos/BarraInformacion.css
+++ b/src/Styles/RecursosHumanos/BarraInformacion.css
@@ -106,7 +106,9 @@
   position: fixed;
   cursor: pointer;
   bottom: 3%;
-  left: 3%;
+  left: 2%;
+  width: 15%;
+  height: 5%;
 }
 
 .add-button,
@@ -115,26 +117,3 @@
   border-radius: 50px;
   color: white;
 }
-/*
-.task-button-div {
-  width: 100%;
-  justify-self: flex-end;
-  display: flex;
-  justify-content: space-between;
-}
-
-.task-button {
-  height: 2em;
-  width: 5em;
-  white-space: normal;
-  border-radius: 30px;
-  border: 0;
-  filter: drop-shadow(0px 3px 2px rgba(0, 0, 0, 0.459));
-  font-family: "Franklin Gothic", "Arial Narrow", Arial, sans-serif;
-  font-size: 24px;
-  cursor: pointer;
-  justify-self: flex-end;
-  margin-bottom: 15%;
-  text-align: center;
-}
-*/
