--- a/src/Styles/RecursosHumanos/Tareas.css
+++ b/src/Styles/RecursosHumanos/Tareas.css
@@ -97,6 +97,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: center;
   align-items: center;
   color: rgb(0, 53, 108);
 }
